// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupCardItem renders with no unassigned and no uncontacted 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    style={
      Object {
        "paddingRight": 30,
      }
    }
  >
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      GROUP NAME
    </MyText>
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "paddingTop": 4,
        }
      }
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      >
        768 Contacts
      </MyText>
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders with unassigned and no uncontacted 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    style={
      Object {
        "paddingRight": 30,
      }
    }
  >
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      GROUP NAME
    </MyText>
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "paddingTop": 4,
        }
      }
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      >
        768 Contacts
      </MyText>
      <React.Fragment>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
            ·  
        </MyText>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 12,
            }
          }
        >
          13 Unassigned
        </MyText>
      </React.Fragment>
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders with unassigned and uncontacted 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    style={
      Object {
        "paddingRight": 30,
      }
    }
  >
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      GROUP NAME
    </MyText>
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "paddingTop": 4,
        }
      }
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      >
        768 Contacts
      </MyText>
      <React.Fragment>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
            ·  
        </MyText>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 12,
            }
          }
        >
          13 Unassigned
        </MyText>
      </React.Fragment>
      <React.Fragment>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
            ·  
        </MyText>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 12,
            }
          }
        >
          56 Uncontacted
        </MyText>
      </React.Fragment>
    </Flex>
  </Flex>
</Card>
`;

exports[`GroupCardItem renders with uncontacted and no unassigned 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    style={
      Object {
        "paddingRight": 30,
      }
    }
  >
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
      GROUP NAME
    </MyText>
    <Flex
      align="center"
      direction="row"
      style={
        Object {
          "paddingTop": 4,
        }
      }
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#B2B0B2",
            "fontSize": 12,
          }
        }
      >
        768 Contacts
      </MyText>
      <React.Fragment>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
            ·  
        </MyText>
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FF5532",
              "fontSize": 12,
            }
          }
        >
          56 Uncontacted
        </MyText>
      </React.Fragment>
    </Flex>
  </Flex>
</Card>
`;
